# linux-libdrm

./: .gitlab-ci.yml  README.rst  configure.ac  core-symbols.txt  libsync.h  meson.build  symbols-check.py  xf86atomic.h  xf86drm.c  xf86drm.h  xf86drmMode.c  xf86drmMode.h
.gitlab-ci/: container-debian-arm64.sh  container-debian-x86_64.sh  debian-install.sh
amdgpu/: amdgpu-symbols.txt  amdgpu.h  amdgpu_bo.c  amdgpu_device.c  amdgpu_gpu_info.c  meson.build
etnaviv/: meson.build
exynos/: meson.build
freedreno/: meson.build
freedreno/msm/: msm_ringbuffer.c
include/drm/: amdgpu_drm.h  drm.h
intel/: intel_bufmgr_gem.c  intel_chipset.c  meson.build  test_decode.c
man/: drmModeFormats.3.rst  meson.build
nouveau/: pushbuf.c
omap/: meson.build
radeon/: meson.build
tegra/: meson.build
tests/: Makefile.am  meson.build
tests/amdgpu/: basic_tests.c  bo_tests.c  hotunplug_tests.c  security_tests.c
tests/drmtest/: Makefile.am  buffers.c  buffers.h  common.h  format.c  meson.build  pattern.c  plane_test.c  planetest
tests/drmtests/: Makefile.am  bmp.c  bmp.h  buffers.c  buffers.h  format.c  format.h  image.c  image.h  kms.c  kms.h  meson.build  pattern.c  pattern.h  plane_flip.c  plane_image.c
tests/kmstest/: main.c
tests/modetest/: modetest.c
tests/nouveau/: threaded.c
